fix: try to fix dark mode

--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -67,3 +67,9 @@ html
 
 html.dark-mode
     scrollbar-color: var(--scrollbar-color) var(--dark-mode-bg)
+
+.dark-mode
+    .hero
+        background: $dark !important
+    .navbar
+        background: $dark !important
